--- a/_posts/2025-11-22-06_53-initial-post.md
+++ b/_posts/2025-11-22-06_53-initial-post.md
@@ -1,6 +1,6 @@
 ---
 type: posts
-title:  "06_53 AM : Initial Post"
+title:  "06:53 AM : Initial Post"
 ---
 
 ![Bear and Moose logo](/images/bear_and_moose.png)
