--- a/_posts/2025-11-23-18_37-etsy-blog-post.md
+++ b/_posts/2025-11-23-18_37-etsy-blog-post.md
@@ -1,6 +1,6 @@
 ---
 type: posts
-title:  "06:38 PM : Created Etsy Blog Post"
+title:  "11/23 - 18:38 : Created Etsy Blog Post"
 ---
 
 And [BAM....](https://blog.osoyalce.com/journal/2025/11/23/Etsy-Storefront.html)!!! :)
