--- a/_posts/2025-11-25-21_18-art-plaza-01.md
+++ b/_posts/2025-11-25-21_18-art-plaza-01.md
@@ -4,8 +4,8 @@ title:  "11/25 - 21:34 : Art - Plaza"
 ---
 In keeping with my current *art* sprint... [Listening](/17_47-art-listening-01)
 
-[Listening](/journal/2025/11/25/listening.png) was still drying, so I used up the rest of the oils with **Plaza**:
+[Listening](/17_47-art-listening-01) was still drying, so I used up the rest of the oils on the palette (and added a bit more) with **Plaza**:
 
 ![Plaza](/images/2025-11-25_plaza.png)
 
--Draft day Zero.
+-Draft day Zero. 
