--- a/_posts/2025-11-25-17_47-art-listening-01.md
+++ b/_posts/2025-11-25-17_47-art-listening-01.md
@@ -1,6 +1,6 @@
 ---
 type: posts
-title:  "11/25 - 20:34 : Art Listening"
+title:  "11/25 - 20:34 : Art - Listening"
 ---
 In keeping with my current *art* sprint, I've started a new painting. This is the very first drop of oil paint on canvas.
 
