--- a/_posts/2025-11-25-21_18-art-plaza-01.md
+++ b/_posts/2025-11-25-21_18-art-plaza-01.md
@@ -1,5 +1,5 @@
 ---
-type: posts
+layout: posts
 title:  "11/25 - 21:34 : Art - Plaza"
 ---
 In keeping with my current *art* sprint... [Listening](/17_47-art-listening-01)
