--- a/_posts/2025-11-28-01_09-db4e-work.md
+++ b/_posts/2025-11-28-01_09-db4e-work.md
@@ -5,8 +5,8 @@ title:  "11/28 - 01:09 : Db4E - Ongoing Work"
 
 Continued to work on [Db4E](https://db4e.osoyalce.com/), the *Database 4 Everything*. This is the unified Monero XMR mining dashboard for deployment, operation and real-time analytics that I'm working on.
 
-- Configured a skeleton [Sphinx](https://sphinx.org) deployment structure to push documentation to *Read the Docs*.
-- Ripped out the old, obsolete (2 complete refactors later) tests folder contents and started fresh:
+- Configured a skeleton [Sphinx](https://www.sphinx-doc.org/en/master/) deployment structure to push documentation to *Read the Docs*.
+- Ripped out the old, obsolete (2 complete refactors later) tests folder contents and started fresh. This work uses the standard [Pytest](https://docs.pytest.org/en/stable/) framework.
 
 ```
 (db4e_venv) dan@sally:/opt/dev/Db4E/tests$ poetry run pytest
