--- a/_posts/2025-11-28-01_09-db4e-work.md
+++ b/_posts/2025-11-28-01_09-db4e-work.md
@@ -11,6 +11,9 @@ Continued to work on [Db4E](https://db4e.osoyalce.com/), the *Database 4 Everyth
   - I am taking a *bottom up* approach i.e. starting with the `SQLDb` class, next the `DeplDb` class that interfaces with `SQLDb`...
 
 
+
+### Pytest Run
+
 ```
 (db4e_venv) dan@sally:/opt/dev/Db4E/tests$ poetry run pytest
 =================================== test session starts ===================================
@@ -27,5 +30,7 @@ db/test_sql_db_initializes_and_creates_sync_meta.py .                           
 ==================================== 2 passed in 0.16s ====================================
 (db4e_venv) dan@sally:/opt/dev/Db4E/tests$ 
 ```
+
+### Random AI Generated Db4E Logo
 
 ![Db4E Steampunk Logo](/images/2025-11-28-db4e-steampunk-logo.jpeg)
