--- a/_posts/2025-12-01-14_08-db4e-work.md
+++ b/_posts/2025-12-01-14_08-db4e-work.md
@@ -5,10 +5,9 @@ title:  "12/01 - 14_08 : Db4E - Ongoing Work"
 
 Continued to work on [Db4E](https://db4e.osoyalce.com/), the *Database 4 Everything*. This is the unified Monero XMR mining dashboard for deployment, operation and real-time analytics that I'm working on.
 
-- Completed 100% test coverage of `BaseDb`:
+# Completed 100% test coverage of `BaseDb`
 
-
-### Pytest Run
+## Pytest Run
 
 Here's a snippet from `poetry run pytest -v`:
 
@@ -28,6 +27,22 @@ db/test_base_db.py::test_initialized_sql_db_is_initialized PASSED               
 db/test_base_db.py::test_uninitialized_sql_db_is_initialized PASSED                [ 20%]
 db/test_base_db.py::test_update_one PASSED                                         [ 22%]
 db/test_base_db.py::test_upsert_records PASSED                                     [ 25%]
+ .
+ .
+ .   
+(db4e_venv) dan@sally:~/dev/Db4E/tests$ 
+```
+
+# Completed 100% test coverage of `DeplDb`
+
+This work is already paying off: I've not discovered my third bug (and fixed it) as a result of my testing.
+
+Here's a snippet from `poetry run pytest -v`:
+
+```
+(db4e_venv) dan@sally:~/dev/Db4E/tests$ poetry run pytest -v
+ .
+ .
  .
  .
  .   
