--- a/_posts/2025-12-01-14_08-db4e-work.md
+++ b/_posts/2025-12-01-14_08-db4e-work.md
@@ -5,6 +5,8 @@ title:  "12/01 - 14_08 : Db4E - Ongoing Work"
 
 Continued to work on [Db4E](https://db4e.osoyalce.com/), the *Database 4 Everything*. This is the unified Monero XMR mining dashboard for deployment, operation and real-time analytics that I'm working on.
 
+I'm currently focusing on creating a comprehensive test suite. **Db4E** has hit a high enough degree of complexity such that ad-hoc, clicking through the TUI is not sufficient to validate the correctness of the code. A test suite has become essential to support the ongoing development. Of course, a comprehensive test suite has more obvious benefits.
+
 # Completed 100% test coverage of `BaseDb`
 
 ## Pytest Run
@@ -35,7 +37,9 @@ db/test_base_db.py::test_upsert_records PASSED                                  
 
 # Completed 100% test coverage of `DeplDb`
 
-This work is already paying off: I've not discovered my third bug (and fixed it) as a result of my testing.
+This work is already paying off: I've not discovered my fourth bug (and fixed it) as a result of my testing.
+
+## Pytest Run
 
 Here's a snippet from `poetry run pytest -v`:
 
@@ -43,6 +47,16 @@ Here's a snippet from `poetry run pytest -v`:
 (db4e_venv) dan@sally:~/dev/Db4E/tests$ poetry run pytest -v
  .
  .
+db/test_depl_db.py::test_init PASSED                                                                 [ 22%]
+db/test_depl_db.py::test_clear_all PASSED                                                            [ 24%]
+db/test_depl_db.py::test_delete_deployment PASSED                                                    [ 25%]
+db/test_depl_db.py::test_get_deployment PASSED                                                       [ 27%]
+db/test_depl_db.py::test_get_deployments PASSED                                                      [ 29%]
+db/test_depl_db.py::test_get_deployment_by_id PASSED                                                 [ 31%]
+db/test_depl_db.py::test_get_deployments_by_type PASSED                                              [ 32%]
+db/test_depl_db.py::test_get_deployment_ids_and_instances PASSED                                     [ 34%]
+db/test_depl_db.py::test_get_downstream PASSED                                                       [ 36%]
+db/test_depl_db.py::test_get_new PASSED                                                              [ 37%]
  .
  .
  .   
