--- a/_posts/2025-12-02-19_48-outlier-ai.md
+++ b/_posts/2025-12-02-19_48-outlier-ai.md
@@ -4,4 +4,4 @@ title:  "12/02 - 19:48 : Outlier.ai"
 ---
 
 Took advantage of available work at [Outlier.ai](https://outlier.ai/). Put in a solid 
-four hours of mindless work. I know my landlord will appreciate it!!! :)
+six hours of mindless work. I know my landlord will appreciate it!!! :)
