--- a/_posts/2025-12-01-14_08-db4e-work.md
+++ b/_posts/2025-12-01-14_08-db4e-work.md
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title:  "12/01 - 14_08 : Db4E - Ongoing Work"
+title:  "12/01 - 14:08 : Db4E - Ongoing Work"
 ---
 
 Continued to work on [Db4E](https://db4e.osoyalce.com/), the *Database 4 Everything*. This is the unified Monero XMR mining dashboard for deployment, operation and real-time analytics that I'm working on.
