--- a/_posts/2025-12-04-15_26-db4e-work.md
+++ b/_posts/2025-12-04-15_26-db4e-work.md
@@ -35,3 +35,22 @@ db/test_ops_db.py::test_update_current PASSED                                   
  .   
 (db4e_venv) dan@sally:~/dev/Db4E/tests$ 
 ```
+
+# Started on `DeplMgr` tests
+
+This is just the beginning of the tests for this module.
+
+## Pytest Run
+
+Pytest snippet:
+
+```
+mgr/test_depl_mgr.py::test_add_deployment_monerod PASSED                                              [ 93%]
+mgr/test_depl_mgr.py::test_add_deployment_monerod_remote PASSED                                       [ 94%]
+mgr/test_depl_mgr.py::test_add_deployment_p2pool PASSED                                               [ 96%]
+mgr/test_depl_mgr.py::test_add_deployment_p2pool_remote PASSED                                        [ 97%]
+mgr/test_depl_mgr.py::test_add_deployment_xmrig PASSED                                                [ 98%]
+mgr/test_depl_mgr.py::test_add_deployment_xmrig_remote PASSED                                         [100%]
+```
+
+I'm up to 77 tests now...
